Added authorization for admin account and user account