@@ -7,11 +7,14 @@ import jakarta.servlet.http.HttpServletResponse;
 import org.springframework.http.HttpHeaders;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
 import org.springframework.security.core.Authentication;
+import org.springframework.security.core.GrantedAuthority;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Component;
 import org.springframework.web.filter.OncePerRequestFilter;
 
 import java.io.IOException;
+import java.util.List;
 
 @Component
 public class AuthenticationFilter extends OncePerRequestFilter {
@@ -26,12 +29,16 @@ public class AuthenticationFilter extends OncePerRequestFilter {
     protected void doFilterInternal(HttpServletRequest request, HttpServletResponse response, FilterChain filterChain)
             throws ServletException, IOException {
 
-        String header = request.getHeader(HttpHeaders.AUTHORIZATION);
+        String authHeader = request.getHeader(HttpHeaders.AUTHORIZATION);
 
-        if (header != null) {
-            String user = jwtService.verifyAndGetUser(header);
+        // If the Authorization header is null, it means that the
+        if (authHeader != null) {
+            // Extract the username from the JWT carried in the Authorization header of the incoming request.
+            // If the token is valid, store the info about the authenticated user to the security context.
+            String user = jwtService.verifyAndGetUser(authHeader);
+            GrantedAuthority authority = new SimpleGrantedAuthority(user.toUpperCase());
 
-            Authentication auth = new UsernamePasswordAuthenticationToken(user, null, java.util.Collections.emptyList());
+            Authentication auth = new UsernamePasswordAuthenticationToken(user, null, List.of(authority));
             SecurityContextHolder.getContext().setAuthentication(auth);
         }
 
